--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <button id="Notify" type="button">Notify All</button>
-  <script src="https://unpkg.com/@aspnet/signalr@1.1.0/dist/browser/signalr.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@microsoft/signalr@5.0.5/dist/browser/signalr.min.js" integrity="sha256-mp8kOLx6zyKeDxP7yNNQlIdeA4/jQgGkeHw1CYghzsE=" crossorigin="anonymous"></script>
   <script>
     const connection = new signalR.HubConnectionBuilder()
       .withUrl('/signalr/default')
